<resources>
    <string name="app_name">Hisaab Kitaab</string>
    <string name="personal">Personal</string>
    <string name="buiness">Buisness</string>
    <string name="upcoming_notification">Pay for electricity bill $100</string>
    <string name="account_summary">Account Summary</string>
    <string name="view_reports">view Reports</string>
    <string name="view_all">View All</string>
    <string name="received_payment">PAYMENT RECEIVED</string>
    <string name="add_payment">ADD PAYMENT</string>
    <string name="_0">0</string>
    <string name="shop_person">Shop/Person</string>
    <string name="product_category">Product Category</string>
    <string name="rs">₹</string>
    <string name="eg_grocery">eg. Grocery</string>
    <string name="eg_krishna_daily_needs">eg. Krishna Daily Needs</string>
    <string name="eg_milk">eg. Milk</string>
    <string name="product_name">Product Name</string>
    <string name="are_you_borrowing_this_money">Are you borrowing this money?</string>
    <string name="add">ADD</string>
    <string name="for_which">For Which</string>
    <string name="are_you_lending_this_money">Are you lending this money</string>
    <string name="eg_janta_daily_needs">eg. Janta Daily needs</string>
    <string name="eg_for_grocery">eg.for Grocery</string>
    <string name="eg_salary">eg. Salary</string>
    <string name="eg_technology_wala_guru_pvt_ltd">eg. technology wala guru pvt ltd.</string>
    <string name="from_where">From Where</string>
    <string name="paid_to">Paid To</string>
    <string name="recent_transactions">5 Recent Transactions</string>
    <string name="rs_5000">+ ₹5,000</string>
    <string name="paid_to_krishna_general_store_for_grocery">Paid to Krishna General Store for Grocery</string>
    <string name="_9_august_2024_at_1_46pm">9 August 2024 at 1:46pm</string>
    <string name="total_balance_you_have">Total Balance you have: ₹0.0</string>
    <string name="current_balance">Current Balance: ₹0.0</string>
    <string name="you_spent">You Spent: ₹0.0</string>
    <string name="your_salary">Your Salary: ₹0.0</string>
    <string name="total_received">Total Received: ₹0.0</string>
    <string name="settings">Settings</string>
    <string name="user_image">user-image</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="salary">Salary</string>
    <string name="rs_25_000">₹25000</string>
    <string name="john_doe">John Doe</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="create_unique_password">create unique password</string>
    <string name="hi_abhishek">Hi Abhishek</string>
    <string name="enter_your_password">enter your password</string>
    <string name="login">Login</string>
    <string name="remove_password_note">(Empty the textbox to remove password and save)</string>
    <string name="expense_report">Expense Report</string>
    <string name="income_report">Income Report</string>
    <string name="profit_amp_loss"><![CDATA[Profit & Loss]]></string>
    <string name="your_reports">Your Reports</string>
    <string name="where_you_spend">Where you spend?</string>
    <string-array name="time_ranges">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>3 Years</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>