<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/received_payment"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txt_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/rs"
                android:textColor="@color/textPrimary"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/edt_received_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/txt_currency"
                android:autofillHints="true"
                android:background="@color/white"
                android:hint="@string/_0"
                android:inputType="number"
                android:textColor="@color/textPrimary"
                android:textSize="30sp"
                tools:ignore="LabelFor,TextContrastCheck,TouchTargetSizeCheck" />

        </RelativeLayout>


        <!--From Where-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_where"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_from_where"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_background"
            android:hint="@string/eg_technology_wala_guru_pvt_ltd"
            android:inputType="text"
            android:textColor="@color/textSecondary"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <!--For Which-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_which"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_received_for_which"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_background"
            android:hint="@string/eg_salary"
            android:inputType="text"
            android:textColor="@color/textSecondary"
            tools:ignore="TouchTargetSizeCheck" />



        <CheckBox
            android:id="@+id/checkbox_is_borrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_borrowing_this_money"/>
        <!--add button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_background"
            android:text="@string/add"
            android:textColor="@android:color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

</androidx.cardview.widget.CardView>