<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Profile Settings"
        app:titleTextColor="@color/colorPrimary"
        android:duplicateParentState="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/user_image_in_settings"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/icon_user_image"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/user_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="30dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_background"
                android:hint="@string/john_doe"
                android:inputType="text"
                android:textColor="@color/textSecondary"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            <!--salary-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_background"
                android:hint="@string/rs_25_000"
                android:inputType="text"
                android:textColor="@color/textSecondary"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            <!--phone number-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_background"
                android:hint="@string/_10_digit_mobile_number"
                android:inputType="number"
                android:textColor="@color/textSecondary"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            <!--password-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_password_note"
                android:textSize="10sp"
                android:textColor="@color/textSecondary"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_background"
                android:hint="@string/create_unique_password"
                android:inputType="numberPassword"
                android:textColor="@color/textSecondary"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            <TextView
                android:id="@+id/txt_password_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/red"/>


        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:layout_gravity="bottom"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_margin="16dp"/>

</LinearLayout>
