<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/paid_to_krishna_general_store_for_grocery"
            android:layout_marginEnd="70dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txt_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif"
            android:text="@string/rs_5000"
            android:textStyle="bold"
            android:textColor="@color/green"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9_august_2024_at_1_46pm"
        android:fontFamily="sans-serif"/>
</LinearLayout>